various issues covered

--- a/Coding/Stylesheets/diplomatic.css
+++ b/Coding/Stylesheets/diplomatic.css
@@ -13,7 +13,7 @@ It contains styles relevant to just the diplomatic view.
   font-style: italic;
 }
 
-.insertion {
+.insertion, .gloss {
   font-size: small;
   vertical-align: baseline;
   position: relative;
